# attribution

./: .flake8  .pylint  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  issue_template.md
.github/workflows/: build.yml  ci.yml
attribution/: __init__.py  __main__.py  __version__.py  generate.py  helpers.py  main.py  project.py  tag.py  types.py
attribution/tests/: __init__.py  __main__.py  generate.py  helpers.py  project.py  tag.py  types.py
attribution/tests/fake_crate/: Cargo.toml
docs/: conf.py  guide.rst
docs/_static/: custom.css
