[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "attribution"
readme = "README.rst"
authors = [
    {name="Amethyst Reese", email="amethyst@n7.gg"},
]
license = {file="LICENSE"}
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = [
    "attrs >= 19.2.0",
    "click >= 8.0",
    "jinja2 >= 2.7",
    "packaging >= 16.2",
    "tomlkit >= 0.7.0",
]

[project.optional-dependencies]
dev = [
    "black==22.8.0",
    "coverage==6.4.4",
    "flake8==5.0.4",
    "flake8-bugbear==22.8.23",
    "flit==3.7.1",
    "mypy==0.971",
    "pessimist==0.9.3",
    "rich==12.5.1",
    "sphinx==5.1.1; python_version >= '3.8'",
    "sphinx-mdinclude==0.5.2",
    "ufmt==2.0.0",
    "usort==1.0.4",
    "wheel==0.38.4",
]

[project.urls]
Documentation = "https://attribution.omnilib.dev"
Github = "https://github.com/omnilib/attribution"
Changelog = "https://attribution.omnilib.dev/en/latest/changelog.html"

[project.scripts]
attribution = "attribution.main:main"

[tool.flit.sdist]
exclude = [
    ".github/",
]

[tool.attribution]
name = "attribution"
package = "attribution"
ignored_authors = ["dependabot[bot]", "pyup.io bot"]
version_file = true
signed_tags = true

[tool.coverage.run]
branch = true
include = ["attribution/*"]
omit = ["attribution/tests/*"]

[tool.coverage.report]
fail_under = 90
precision = 1
show_missing = true
skip_covered = true
